--- a/style.css
+++ b/style.css
@@ -8,15 +8,27 @@ body {
 
 }
 
+#background {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    top: 0;
+    left: 0;
+    filter: brightness(1.2);
+    z-index: -2;
+}
+
 .header {
     height: 72px;
     display: flex;
     justify-content: center;
-    background-color: #1F2937;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .header_1 {
+
     display: flex;
     width: 1000px;
     justify-content:space-between;
@@ -29,15 +41,16 @@ body {
     justify-content: center;
     align-items: center;
     gap: 15px;
-    background-color: #1F2937;
+    /* background-color: #1F2937; */
     color: white;
     padding: 5rem 2rem;
 }
 
 .cont2 {
+    background-color: #E5E7EB;
     flex: 1;
     text-align: center;
-    padding: 3rem 2rem;
+    padding: 2rem 2rem;
 
 }
 
@@ -50,7 +63,7 @@ body {
 
 .cont3 {
 
-    background-color: #E5E7EB;
+    /* background-color: #E5E7EB; */
     flex: 1;
     display: flex;
     justify-content: center;
@@ -61,10 +74,15 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 850px;
+    background-color: rgb(229, 231, 235, 0.2);
+    border-radius: 16px;
+    border: #E5E7EB inset 1px;
+    padding: 10px;
 }
 
 .cont4 {
     display: flex;
+    background-color: #E5E7EB;
     flex: 1;
     justify-content: center;
     align-items: center;
@@ -107,6 +125,11 @@ body {
     font-size: 18px;
     color: #E5E7EB;
 }
+
+#keyboard {
+    border: #f9faf8 2px solid;
+    border-radius: 8px;
+}
 .txt_btn {
     display: flex;
     justify-content: center;
@@ -114,6 +137,9 @@ body {
     flex-direction: column;
     width: 500px;
     padding: 10px;
+    background-color: rgba(27, 27, 27, 0.5);
+    border: #ffffff inset 2px;
+    border-radius: 8px;
 
 }
 .sign {
@@ -170,7 +196,7 @@ a {
     flex: 1;
     font-size: 32px;
     font-style: italic;
-    color: #1F2937;
+    color: #E5E7EB;
 
     max-width: 900px;
 }
@@ -178,7 +204,7 @@ a {
     align-self: flex-end;
     font-size: 36px;
     font-weight: bolder;
-    color: #1F2937;
+    color: #E5E7EB;
 
 }
 
