--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #1F2937
 }
 
 .header_1 {
@@ -41,7 +41,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 15px;
-    /* background-color: #1F2937; */
+    background-color: #1F2937;
     color: white;
     padding: 5rem 2rem;
 }
@@ -137,7 +137,7 @@ body {
     flex-direction: column;
     width: 500px;
     padding: 10px;
-    background-color: rgba(27, 27, 27, 0.5);
+    background-color: #11171f;
     border: #ffffff inset 2px;
     border-radius: 8px;
 
@@ -146,7 +146,7 @@ body {
     margin-top: 10px;
     font-size: 15px;
     align-self: flex-start;
-    background-color: #3882F6;
+    background-color: #526a8b;
     color: #f9faf8;
     padding: 5px 20px;
     border-radius: 8px;
@@ -183,7 +183,7 @@ a {
 {
     width: 200px;
     height: 200px;
-    border: 3px #3882F6 solid;
+    border: 3px #526a8b solid;
     border-radius: 8px;
 }
 
