--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1F2937
+    background-color: #5f87ab;
 }
 
 .header_1 {
@@ -41,13 +41,13 @@ body {
     justify-content: center;
     align-items: center;
     gap: 15px;
-    background-color: #1F2937;
+    background-color: #5f87ab;
     color: white;
     padding: 5rem 2rem;
 }
 
 .cont2 {
-    background-color: #E5E7EB;
+    background-color: white;
     flex: 1;
     text-align: center;
     padding: 2rem 2rem;
@@ -63,7 +63,7 @@ body {
 
 .cont3 {
 
-    /* background-color: #E5E7EB; */
+    background-color: #5f87ab;
     flex: 1;
     display: flex;
     justify-content: center;
@@ -74,15 +74,15 @@ body {
     display: flex;
     flex-direction: column;
     max-width: 850px;
-    background-color: rgb(229, 231, 235, 0.2);
+    background-color: #365673;
     border-radius: 16px;
-    border: #E5E7EB inset 1px;
+    border: white inset 1px;
     padding: 10px;
 }
 
 .cont4 {
     display: flex;
-    background-color: #E5E7EB;
+    background-color: white;
     flex: 1;
     justify-content: center;
     align-items: center;
@@ -93,8 +93,8 @@ body {
 .cont4_1 {
     flex: 1;
     display: flex;
-    background-color: #3882F6;
-    color: #f9faf8;
+    background-color: #cfe2f3;
+    color: #365673;
     border-radius: 8px;
     align-items: center;
     justify-content: space-around;
@@ -108,26 +108,26 @@ body {
     flex: 1;
     display: flex;
     justify-content: center;
-    background-color: #1F2937;
+    background-color: #5f87ab;
     align-items: center;
     padding: 1rem 2rem;
-    color: #E5E7EB;
+    color: white;
 }
 
 
 .Title{
     font-size: 48px;
     font-weight:900;
-    color: #f9faf8;
+    color: white;
 }
 .sub {
     margin-top:10px ;
     font-size: 18px;
-    color: #E5E7EB;
+    color: white;
 }
 
 #keyboard {
-    border: #f9faf8 2px solid;
+    border: white 2px solid;
     border-radius: 8px;
 }
 .txt_btn {
@@ -137,7 +137,7 @@ body {
     flex-direction: column;
     width: 500px;
     padding: 10px;
-    background-color: #11171f;
+    background-color: #365673;
     border: #ffffff inset 2px;
     border-radius: 8px;
 
@@ -146,7 +146,7 @@ body {
     margin-top: 10px;
     font-size: 15px;
     align-self: flex-start;
-    background-color: #526a8b;
+    background-color: #8db3d5;
     color: #f9faf8;
     padding: 5px 20px;
     border-radius: 8px;
@@ -176,7 +176,7 @@ a {
     justify-content: center;
     font-size: 36px;
     font-weight: bolder;
-    color: #1F2937;
+    color: #365673;
 
 }
 .img3
@@ -188,7 +188,7 @@ a {
 }
 
 .text {
-    color: #7a7a7a
+    color: #365673;
 }
 
 .quote {
@@ -196,7 +196,7 @@ a {
     flex: 1;
     font-size: 32px;
     font-style: italic;
-    color: #E5E7EB;
+    color: white;
 
     max-width: 900px;
 }
@@ -204,20 +204,20 @@ a {
     align-self: flex-end;
     font-size: 36px;
     font-weight: bolder;
-    color: #E5E7EB;
+    color: white;
 
 }
 
 .bxtxt, .bxtxt2 {
     font-size: 18px;
-    color: #E5E7EB;
+    color: #365673;
 }
 
 .bxtxt {
     font-weight: bolder;
 }
 .sing2 {
-    background-color: #3882F6;
+    background-color: #365673;
     color: #f9faf8;
     padding: 10px 30px;
     border-radius: 8px;
