--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
     display: flex;
     width: 1000px;
-    justify-content:space-between;
+    justify-content:flex-end;
     padding: 0px 10px;
     align-items: center;
 }
@@ -183,7 +183,7 @@ a {
 {
     width: 200px;
     height: 200px;
-    border: 3px #526a8b solid;
+    border: 3px #365673 solid;
     border-radius: 8px;
 }
 
